# /x86_emulator/src/CMakeLists.txt

# Specify the minimum version of CMake required
cmake_minimum_required(VERSION 3.10)

# Specify the project name
project(x86_emulator)

# Set the C++ standard
set(CMAKE_CXX_STANDARD 17)


# Optionally, you can add compile options if needed
# target_compile_options(emulator PRIVATE -Wall -Wextra -Werror)

# If you have dependencies, you can find and link them here
# find_package(SomeDependency REQUIRED)
# target_link_libraries(emulator PRIVATE SomeDependency::SomeDependency)
